--- a/main.css
+++ b/main.css
@@ -57,5 +57,17 @@ a:hover {
 }
 
 .footer {
-	padding-bottom: 0%;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 2.5rem;
+}
+
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+#content-wrap {
+  padding-bottom: 2.5rem;    /* Footer height */
 }
